1.13/1-2-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shuting
  annotations:
    allowed_namespaces: alice,bob,carol
    test: demo
