1.13/3-2-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: shuting-test-mutation
  labels:
    statnett.no/project-name: shuting-test
