1.13/2-1-policy-validate.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: enforce-pod-security
spec:
  emitWarning: true
  rules:
  - name: validate-pod-security
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      failureAction: Audit
      podSecurity:
        level: restricted
        version: latest
